<resources>
    <string name="app_name">Geksa</string>

    <string name="settings">Settings</string>
    <string name="connection_settings_title">Connection settings</string>
    <string name="host_address_title">TCP address</string>
    <string name="move_settings_title">Move settings</string>
    <string name="front_speed_title">Front speed</string>
    <string name="back_speed_title">Back speed</string>
    <string name="left_rotate_speed_title">Left rotate speed</string>
    <string name="rigth_rotate_speed_title">Rigth rotate speed</string>

    <string name="host_address_key">host_address</string>
    <string name="front_speed_key">front_speed_</string>
    <string name="back_speed_key">back_speed_</string>
    <string name="left_rotate_speed_key">left_rotate_speed</string>
    <string name="rigth_rotate_speed_key">rigth_rotate_speed</string>

    <string name="ok_text">Ok</string>
    <string name="cancel_text">Cancel</string>
    <string name="current_value_text">Value</string>
    <string name="input_angle_value_text">Input angle value</string>

</resources>
